syntax = "proto3";

package o5.auth.v1;

import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/pentops/o5-auth/gen/o5/auth/v1/auth_o5pb";

message Action {
  string method = 1 [(buf.validate.field).required = true];
  Actor actor = 2 [(buf.validate.field).required = true];

  Fingerprint fingerprint = 3;
}

message Fingerprint {
  // The IP address of the client as best as can be determined
  optional string ip_address = 1;

  // The provided user agent string of the client.
  optional string user_agent = 2;
}

message Actor {
  // The unique identifier of the actor, derived from the various actor type
  // methods.
  string subject_id = 1 [(buf.validate.field).string.uuid = true];

  // Free string identifying the type of the actor, e.g. 'user', 'service',
  // defined by the authenticating system. (subject IDs must still be unique without
  // considering subject_type)
  string subject_type = 2;

  AuthenticationMethod authentication_method = 3;

  Claim claim = 4 [(buf.validate.field).required = true];

  // Arbitrary tags that are defined by the authorizing system to quickly
  // identify the user e.g. the user's email address, API Key Name, etc.
  // Must not be used in authorization logic, and should not be used as a
  // the primary source of the actor's identity.
  map<string, string> actor_tags = 5;
}

message AuthenticationMethod {
  oneof type {
    JWT jwt = 1;
    Session session = 2;
    External external = 3;
  }

  message JWT {
    string jwt_id = 1;
    string issuer = 2;
    google.protobuf.Timestamp issued_at = 3;
  }

  message Session {
    // The identity of the system which stored and evaluated the session.
    string session_manager = 1;

    // The session ID as defined by the session manager
    string session_id = 2;

    // The time at which the session was verified by the session manager.
    google.protobuf.Timestamp verified_at = 3;

    // The time at which the session began at the session manager. (e.g. the
    // time a refresh token was used to create a new session)
    google.protobuf.Timestamp authenticated_at = 4;
  }

  message External {
    string system_name = 1;
    map<string, string> metadata = 2;
  }
}

// A Claim is a Realm Tenant + Scope, identifying the tenant the user belongs
// to, and what they can do.
message Claim {
  string realm_id = 1 [(buf.validate.field).string.uuid = true];
  string tenant_type = 2 [(buf.validate.field).string.pattern = "^[a-z0-9_]+$"];
  string tenant_id = 3 [(buf.validate.field).string.uuid = true];
  repeated string scopes = 4;
}
